--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+*.mlmodelc/
+*.mlpackage/
+*.bin
+*.mil
+*.json
 model-place/
-newoneletssee/minilm.mlpackage
-newoneletssee/StatefulMistral7BInstructInt4.mlmodelc
+CoreApplication-RAG/minilm.mlpackage/
+CoreApplication-RAG/StatefulMistral7BInstructInt4.mlmodelc/
+*.xcuserdatad/
+*.xcworkspace/xcuserdata/
+DerivedData/
+build/
+.DS_Store
+.swiftpm/
+Package.resolved
+*.log
+*.xcdebugger/
+ß
